- Exporting resources by role - Fixing bug AP-5854, where export was not possible if the view in PD was set to BPMN